--- a/app/src/main/res/layout/layout_dialog_caidan.xml
+++ b/app/src/main/res/layout/layout_dialog_caidan.xml
@@ -4,83 +4,73 @@
     android:id="@+id/item_feed_detail_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:background="#00000000"
     android:orientation="vertical" >
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/beijing">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/jinbi_icon"/>
+
+    </RelativeLayout>
+
 
 
     <TextView
+        android:id="@+id/caidan_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="#333333"
-        android:ellipsize="end"
-        android:gravity="center_horizontal"
-        android:text="彩蛋大奖来了"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="12dp"
-        android:background="@color/bg_sys"/>
-
-    <TextView
-        android:id="@+id/caidan_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/app_sys_color"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         android:textSize="12sp"
         android:textColor="#333333"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+        android:textStyle="bold"
         android:ellipsize="end"
-        android:gravity="center_horizontal"
-        android:text=""/>
-
-    <ImageView
-        android:id="@+id/caidan_image"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:background="@mipmap/bg_image"/>
+        android:gravity="center"
+        android:text="恭喜获得嗨币"/>
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="12dp"
-        android:background="@color/bg_sys"/>
-
-    <TextView
-        android:id="@+id/caidan_ok"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/app_sys_color"
-        android:textSize="12sp"
-        android:textColor="#333333"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:ellipsize="end"
-        android:gravity="center_horizontal"
-        android:text="分享给朋友"/>
+        android:paddingBottom="16dp">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:background="@color/bg_sys"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/xing"/>
 
-    <TextView
+        <TextView
+            android:id="@+id/caidan_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:textSize="14sp"
+            android:textColor="#ffa015"
+            android:textStyle="bold"
+            android:ellipsize="end"
+            android:text="+ 1"/>
+
+    </RelativeLayout>
+
+
+    <Button
         android:id="@+id/caidan_close"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/bg_tab"
-        android:textSize="12sp"
-        android:textColor="#333333"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:ellipsize="end"
-        android:gravity="center_horizontal"
-        android:text="关闭本页"/>
+        android:layout_width="100dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/shape_button"
+        android:layout_gravity="center_horizontal"
+        android:textSize="14sp"
+        android:textColor="#ffffff"
+        android:text="我知道了"/>
 
 </LinearLayout>
 
