--- a/app/src/main/res/layout/layout_dialog_update.xml
+++ b/app/src/main/res/layout/layout_dialog_update.xml
@@ -1,20 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_feed_detail_layout"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="#00000000"
+    android:orientation="vertical" >
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/beijing">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/jinbi_icon"/>
+
+    </RelativeLayout>
+
+
 
     <TextView
-        android:id="@+id/dialog_update_content"
-        android:layout_width="wrap_content"
+        android:id="@+id/update_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/dialog_update_content"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/dialog_update_content_text_size"
-        android:layout_gravity="center_horizontal"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:textSize="12sp"
+        android:textColor="#333333"
+        android:textStyle="bold"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:text="升级提示"/>
+
+
+    <TextView
+        android:id="@+id/update_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:textSize="14sp"
+        android:textColor="#ffa015"
+        android:textStyle="bold"
+        android:ellipsize="end"
+        android:text="+ 1"/>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:id="@+id/update_close"
+            android:layout_width="60dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/shape_button"
+            android:textSize="14sp"
+            android:textColor="#ffffff"
+            android:text="取消"/>
+
+        <Button
+            android:id="@+id/update_ok"
+            android:layout_width="60dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/shape_button"
+            android:textSize="14sp"
+            android:textColor="#ffffff"
+            android:text="确定"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
