1.修改评论区域上三角 2.探索页面设置分享和人气排行内部不滑动事件，整体根据相应scroll事件，同时设置frame长度为8196，导致底部出现大量空白

--- a/app/src/main/res/layout/fragment_explore_nav.xml
+++ b/app/src/main/res/layout/fragment_explore_nav.xml
@@ -10,8 +10,8 @@
 
     <ScrollView
         android:scrollbars="none"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
         <LinearLayout
             android:id="@+id/explore_income_layout"
             android:layout_width="match_parent"
@@ -79,7 +79,7 @@
             <FrameLayout
                 android:id="@+id/fragment_other_index_container"
                 android:layout_width="match_parent"
-                android:layout_height="560dp"
+                android:layout_height="8196dp"
                 android:orientation="vertical"/>
 
 
