--- a/app/src/main/res/drawable/shape_sanjiao.xml
+++ b/app/src/main/res/drawable/shape_sanjiao.xml
@@ -8,8 +8,8 @@
             android:pivotX="-40%"
             android:pivotY="80%">
             <shape android:shape="rectangle">
-                <solid android:color="#ffffff"/>
-                <stroke android:width="2dp" android:color="#f0f0f0" />
+                <solid android:color="#f0f0f0"/>
+                <stroke android:width="1dp" android:color="#ffffff" />
             </shape>
         </rotate>
     </item>
