--- a/app/src/main/res/layout/fragment_more_nav.xml
+++ b/app/src/main/res/layout/fragment_more_nav.xml
@@ -52,7 +52,7 @@
                     android:gravity="center"
                     android:textColor="#333333"
                     android:textSize="16sp"
-                    android:text="点击登录"/>
+                    android:text="点击登录兑换话费"/>
 
 
 
@@ -111,7 +111,7 @@
                             android:textColor="#ffa015"
                             android:textSize="14sp"
                             android:layout_gravity="center_horizontal"
-                            android:text="100"/>
+                            android:text="0"/>
 
                 </LinearLayout>
 
