1.探索收入排行界面昵称设置最多4个字

--- a/app/src/main/res/layout/item_ecplore_income.xml
+++ b/app/src/main/res/layout/item_ecplore_income.xml
@@ -3,8 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    android:paddingLeft="22dp"
-    android:paddingRight="22dp"
+    android:paddingLeft="19dp"
+    android:paddingRight="19dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:orientation="vertical" >
@@ -53,6 +53,8 @@
         android:textSize="14sp"
         android:textColor="#333333"
         android:textStyle="bold"
+        android:maxEms="4"
+        android:singleLine="true"
         android:ellipsize="end"
         android:text="昵称"/>
 
