--- a/app/src/main/res/layout/fragment_more_nav.xml
+++ b/app/src/main/res/layout/fragment_more_nav.xml
@@ -168,57 +168,6 @@
                 android:layout_height="12dp"
                 android:background="@drawable/bg_space"/>
 
-
-            <RelativeLayout
-                android:id="@+id/user_reward_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:background="@drawable/shape_selector"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/user_reward_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/zhengce" />
-
-                <TextView
-                    android:id="@+id/user_reward_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="38dp"
-                    android:textColor="#333333"
-                    android:textSize="14sp"
-                    android:text="奖励政策"
-                    android:layout_centerVertical="true"/>
-
-
-
-                <ImageView
-                    android:id="@+id/user_reward_more"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@mipmap/gengduo" />
-
-            </RelativeLayout>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/bg_space"/>
-
-
-
-
             <RelativeLayout
                 android:id="@+id/user_recharge_layout"
                 android:layout_width="match_parent"
@@ -308,6 +257,53 @@
                 android:layout_marginRight="16dp"
                 android:background="@drawable/bg_space"/>
 
+
+            <RelativeLayout
+                android:id="@+id/user_reward_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:background="@drawable/shape_selector"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/user_reward_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/zhengce" />
+
+                <TextView
+                    android:id="@+id/user_reward_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="38dp"
+                    android:textColor="#333333"
+                    android:textSize="14sp"
+                    android:text="奖励政策"
+                    android:layout_centerVertical="true"/>
+
+
+
+                <ImageView
+                    android:id="@+id/user_reward_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/gengduo" />
+
+            </RelativeLayout>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/bg_space"/>
 
             <RelativeLayout
                 android:id="@+id/user_code_layout"
@@ -445,51 +441,6 @@
 
             </RelativeLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/bg_space"/>
-
-            <RelativeLayout
-                android:id="@+id/user_about_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:background="@drawable/shape_selector"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/user_about_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/guanyu" />
-
-                <TextView
-                    android:id="@+id/user_about_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="38dp"
-                    android:textColor="#333333"
-                    android:textSize="14sp"
-                    android:text="关于我们"
-                    android:layout_centerVertical="true"/>
-
-
-
-                <ImageView
-                    android:id="@+id/user_about_more"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@mipmap/gengduo" />
-
-            </RelativeLayout>
 
 
             <View
@@ -537,6 +488,53 @@
                     android:src="@mipmap/gengduo" />
 
             </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/bg_space"/>
+
+            <RelativeLayout
+                android:id="@+id/user_about_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:background="@drawable/shape_selector"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/user_about_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/guanyuwomen" />
+
+                <TextView
+                    android:id="@+id/user_about_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="38dp"
+                    android:textColor="#333333"
+                    android:textSize="14sp"
+                    android:text="关于我们"
+                    android:layout_centerVertical="true"/>
+
+
+
+                <ImageView
+                    android:id="@+id/user_about_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/gengduo" />
+
+            </RelativeLayout>
+
 
 
 
