1.解决视频全屏横竖屏切换的问题 2.首页修改为嗨区和X区 3.修改手机验证界面在兑换话费和输入邀请码界面不同的显示文字

--- a/app/src/main/res/layout/layout_dialog_sms.xml
+++ b/app/src/main/res/layout/layout_dialog_sms.xml
@@ -31,7 +31,7 @@
         android:textStyle="bold"
         android:ellipsize="end"
         android:gravity="center"
-        android:text="验证手机号"/>
+        android:text="免费充值"/>
 
 
 
