--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -17,8 +17,7 @@
         <ImageView
             android:id="@+id/user_avatar"
             android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@mipmap/user_default"/>
+            android:layout_height="32dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,7 +35,7 @@
                 android:textSize="12sp"
                 android:textColor="#666666"
                 android:ellipsize="end"
-                android:text="昵称"/>
+                android:text=""/>
 
             <TextView
                 android:id="@+id/comment_text"
@@ -46,7 +45,7 @@
                 android:textColor="#999999"
                 android:ellipsize="end"
                 android:layout_gravity="clip_vertical"
-                android:text="内容"/>
+                android:text="暂时没有任何评论"/>
 
         </LinearLayout>
 
