--- a/app/src/main/res/layout/item_feed_all.xml
+++ b/app/src/main/res/layout/item_feed_all.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content"
     android:background="#f0f0f0"
     android:paddingTop="12dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:orientation="vertical" >
 
 
@@ -96,8 +96,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="8dp">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:id="@+id/toolbar_love_btn"
