1.修改升级提示框文字靠左对齐将加粗字体去掉

--- a/app/src/main/res/layout/layout_dialog_update.xml
+++ b/app/src/main/res/layout/layout_dialog_update.xml
@@ -40,12 +40,11 @@
         android:id="@+id/update_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:gravity="center_horizontal|left"
         android:paddingLeft="6dp"
         android:paddingRight="6dp"
         android:textSize="14sp"
         android:textColor="#ffa015"
-        android:textStyle="bold"
         android:ellipsize="end"
         android:text="+ 1"/>
 
