1.根据视频宽度和高度自动适应是横屏播放还是竖屏播放 2.列表分享按钮靠上的问题 3.我的收藏 我的嗨币点击区域的问题 4.列表和详情页图片填充采用centercrop

--- a/app/src/main/res/layout/fragment_more_nav.xml
+++ b/app/src/main/res/layout/fragment_more_nav.xml
@@ -79,7 +79,7 @@
 
 
             <LinearLayout
-                android:id="@+id/user_income_layout"
+                android:id="@+id/user_other_layout"
                 android:layout_width="match_parent"
                 android:background="#ffffff"
                 android:layout_height="60dp"
@@ -87,6 +87,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/user_income_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -133,6 +134,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/user_fav_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
