--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:id="@+id/item_detail_content_layout"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
         android:paddingLeft="16dp"
@@ -20,7 +20,7 @@
             android:layout_width="fill_parent"
             android:layout_height="170dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"/>
+            android:scaleType="centerCrop"/>
         <ImageView
             android:id="@+id/item_detail_content_play"
             android:layout_width="fill_parent"
