--- a/app/src/main/res/layout/item_pic.xml
+++ b/app/src/main/res/layout/item_pic.xml
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:background="@mipmap/bg_image"/>
+        android:scaleType="centerCrop"/>
 
 </LinearLayout>
