1.视频播放地址不可用就会crash的bug 2.webview加载进度条

--- a/app/src/main/res/layout/activity_money.xml
+++ b/app/src/main/res/layout/activity_money.xml
@@ -11,7 +11,7 @@
         layout="@layout/layout_toolbar" />
 
     <com.whenhi.hi.view.web.ProgressWebView
-        android:id="@+id/about_webview"
+        android:id="@+id/money_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
