--- a/app/src/main/res/layout/item_webview.xml
+++ b/app/src/main/res/layout/item_webview.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <WebView
+    <com.whenhi.hi.view.web.ProgressWebView
         android:id="@+id/detail_webview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
