1.首页 探索 消息和我的一级界面框架完成

--- a/app/src/main/res/layout/fragment_home_nav.xml
+++ b/app/src/main/res/layout/fragment_home_nav.xml
@@ -30,12 +30,12 @@
         <com.androidkun.xtablayout.XTabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            app:xTabBackgroundColor="#ffffff"
+            android:layout_height="60dp"
+            android:background="#fafafa"
+            app:xTabBackgroundColor="#fafafa"
             app:xTabMode="fixed"
             app:xTabGravity="1"
-            app:xTabMaxWidth="100dp"
+            app:xTabMaxWidth="60dp"
             app:xTabIndicatorColor="#ffa015"
             app:xTabIndicatorHeight="2dp"
             app:xTabIndicatorWidth="18dp"
