--- a/app/src/main/res/drawable/shape_no3.xml
+++ b/app/src/main/res/drawable/shape_no3.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#b2b2b2" />
+    <solid android:color="#ffa015" />
     <corners
         android:topLeftRadius="8dp"
         android:topRightRadius="8dp"
         android:bottomRightRadius="8dp"
         android:bottomLeftRadius="8dp"/>
-    <stroke android:width="1dp" android:color="#b2b2b2" />
+    <stroke android:width="1dp" android:color="#ffa015" />
 </shape>
