--- a/app/src/main/res/layout/fragment_explore_nav.xml
+++ b/app/src/main/res/layout/fragment_explore_nav.xml
@@ -1,89 +1,30 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f0f0f0"
-    android:orientation="vertical">
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/layout_toolbar_explore" />
+    android:layout_height="match_parent">
 
-    <ScrollView
-        android:scrollbars="none"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        <LinearLayout
-            android:id="@+id/explore_income_layout"
+
+    <LinearLayout
+        android:id="@+id/explore"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_toolbar_explore" />
+
+        <!--内容区域-->
+
+
+        <FrameLayout
+            android:id="@+id/fragment_explore_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent"
+            android:orientation="vertical"/>
 
-            <ImageView
-                android:id="@+id/explore_craft"
-                android:layout_width="fill_parent"
-                android:layout_height="120dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/chuansuo"
-                android:visibility="gone"/>
-
-            <ImageView
-                android:id="@+id/explore_male"
-                android:layout_width="fill_parent"
-                android:layout_height="120dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/male"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="#ffffff"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:textColor="#333333"
-                android:textStyle="bold"
-                android:ellipsize="end"
-                android:text="「 收入榜 」"/>
+    </LinearLayout>
 
 
-            <FrameLayout
-                android:id="@+id/fragment_other_income_sub_container"
-                android:paddingTop="2dp"
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:orientation="vertical"/>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="4dp"
-                android:background="#ffffff"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/user_income_more"
-                    android:layout_width="100dp"
-                    android:layout_height="34dp"
-                    android:background="@drawable/shape_button_black"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="14sp"
-                    android:textColor="#ffa015"
-                    android:text="查看更多"/>
-
-            </LinearLayout>
-
-
-
-            <FrameLayout
-                android:id="@+id/fragment_other_index_container"
-                android:layout_width="match_parent"
-                android:layout_height="5504dp"
-                android:orientation="vertical"/>
-
-
-        </LinearLayout>
-    </ScrollView>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
