--- a/app/src/main/res/layout/item_explore_income.xml
+++ b/app/src/main/res/layout/item_explore_income.xml
@@ -1,12 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#ffffff"
-    android:paddingLeft="19dp"
-    android:paddingRight="19dp"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp"
+    android:paddingBottom="15dp"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -19,7 +18,8 @@
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_gravity="center"
-            android:paddingLeft="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="2dp"
             android:src="@mipmap/user_default"/>
 
         <ImageView
@@ -27,48 +27,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingTop="2dp"
             android:src="@mipmap/no2"/>
 
-        <TextView
-            android:id="@+id/user_income_index"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="26dp"
+
+        <Button
+            android:id="@+id/user_income_text"
+            android:layout_width="57dp"
+            android:layout_height="18dp"
+            android:background="@drawable/shape_no1"
+            android:layout_marginTop="86dp"
+            android:layout_marginLeft="10dp"
             android:gravity="center"
-            android:paddingTop="52dp"
-            android:textSize="12sp"
             android:textColor="#ffffff"
-            android:textStyle="bold"
-            android:ellipsize="end"
-            android:text="NO.1"/>
+            android:textSize="14sp"
+            android:text=""/>
     </RelativeLayout>
 
     <TextView
         android:id="@+id/user_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="center"
-        android:textSize="14sp"
+        android:layout_marginTop="10dp"
+        android:textSize="12sp"
         android:textColor="#333333"
-        android:textStyle="bold"
         android:maxEms="4"
         android:singleLine="true"
         android:ellipsize="end"
         android:text="昵称"/>
 
-    <TextView
-        android:id="@+id/user_income"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:textSize="14sp"
-        android:textColor="#ffa015"
-        android:textStyle="bold"
-        android:ellipsize="end"
-        android:text="100金币"/>
 
 
 
