--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,41 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:background="@color/bg_sys">
+    android:layout_marginBottom="10dp"
+    android:orientation="vertical"
+    android:background="#ffffff">
 
-
-    <ImageView
-        android:id="@+id/item_message_image"
-        android:layout_width="33dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="16dp"
-        android:src="@mipmap/notice_icon"/>
-
-    <TextView
-        android:id="@+id/item_message_time"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:textColor="#000000"
-        android:layout_marginTop="14dp"
-        android:layout_toRightOf="@+id/item_message_image"
-        android:layout_marginLeft="8dp"/>
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/item_message_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="13sp"
-        android:textColor="#8c8c8c"
-        android:layout_below="@+id/item_message_time"
-        android:layout_toRightOf="@+id/item_message_image"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:paddingBottom="12dp"/>
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/item_message_title_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical">
+
+
+                <ImageView
+                    android:id="@+id/item_message_image"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@mipmap/logo"/>
+
+                <TextView
+                    android:id="@+id/item_message_user"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="6dp"
+                    android:textColor="#333333"
+                    android:textSize="12sp"
+                    android:text="嗨妹"/>
+
+
+                <Button
+                    android:id="@+id/item_new"
+                    android:layout_width="40dp"
+                    android:layout_height="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:background="@drawable/shape_button_black"
+                    android:layout_gravity="center"
+                    android:textColor="#ffa015"
+                    android:textSize="10sp"
+                    android:text="新消息"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical">
+                <TextView
+                    android:id="@+id/item_message_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="#999999"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/bg_space"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:layout_gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/item_message_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lineSpacingExtra="4dp"
+                android:lineSpacingMultiplier="1"
+                android:textSize="13sp"
+                android:textColor="#8c8c8c"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
