--- a/app/src/main/res/layout/layout_toolbar_more.xml
+++ b/app/src/main/res/layout/layout_toolbar_more.xml
@@ -1,9 +1,9 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="60dp"
     android:minHeight="?attr/actionBarSize"
-    android:background="#ffffff">
+    android:background="#fafafa">
 
     <TextView
         android:id="@+id/toolbar_title"
