1.我的二级界面基本完成

--- a/app/src/main/res/layout/fragment_more_nav.xml
+++ b/app/src/main/res/layout/fragment_more_nav.xml
@@ -338,7 +338,7 @@
                     android:paddingLeft="6dp"
                     android:textColor="#333333"
                     android:textSize="14sp"
-                    android:text="我的提现"/>
+                    android:text="提现记录"/>
 
 
             </LinearLayout>
