--- a/app/src/main/res/layout/activity_my_haibi_record.xml
+++ b/app/src/main/res/layout/activity_my_haibi_record.xml
@@ -2,14 +2,15 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffffff">
+
     <include
         android:id="@+id/toolbar"
         layout="@layout/layout_toolbar" />
 
-
     <FrameLayout
-        android:id="@+id/fragment_other_income_index_container"
+        android:id="@+id/fragment_other_income_record_container"
         android:paddingTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
