--- a/app/src/main/res/layout/activity_pic.xml
+++ b/app/src/main/res/layout/activity_pic.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_sys">
+    android:background="#ffffff">
     <include
         android:id="@+id/toolbar"
         layout="@layout/layout_toolbar_detail" />
