--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.whenhi.hi.activity.AboutActivity">
+    android:background="#ffffff">
 
     <include
         android:id="@+id/toolbar"
