--- a/app/src/main/res/layout/item_charge_record.xml
+++ b/app/src/main/res/layout/item_charge_record.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:background="#ffffff"
     android:orientation="vertical" >
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@drawable/bg_space"/>
     <RelativeLayout
         android:id="@+id/item_charge_record_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         android:background="@drawable/shape_selector"
@@ -34,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="8dp"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 android:textColor="#333333"
                 android:ellipsize="end"
                 android:text="充值1元"/>
@@ -57,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#ffa015"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:ellipsize="end"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
