--- a/app/src/main/res/layout/item_my_haibi_record.xml
+++ b/app/src/main/res/layout/item_my_haibi_record.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:background="#ffffff"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/item_user_income_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         android:orientation="vertical" >
@@ -33,7 +34,7 @@
                 android:textSize="14sp"
                 android:textColor="#333333"
                 android:ellipsize="end"
-                android:text="原因"/>
+                android:text="金额"/>
 
 
             <TextView
@@ -52,8 +53,8 @@
             android:id="@+id/item_user_income_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#ffa015"
-            android:textSize="14sp"
+            android:textColor="#333333"
+            android:textSize="16sp"
             android:ellipsize="end"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
