--- a/app/src/main/res/layout/item_user_income_index.xml
+++ b/app/src/main/res/layout/item_user_income_index.xml
@@ -1,67 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_user_score_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#f0f0f0"
-    android:paddingTop="6dp"
-    android:paddingLeft="6dp"
-    android:paddingRight="6dp"
+    android:background="#ffffff"
+    android:layout_gravity="center_vertical"
+    android:paddingRight="15dp"
     android:orientation="vertical" >
 
-
-
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/user_income_index_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_index"
-        android:paddingLeft="16dp"
-        android:paddingTop="6dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="6dp">
+        android:layout_gravity="center_vertical"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/item_user_score_index"
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:textColor="#9b9b9b"/>
+            android:layout_gravity="center_vertical">
 
-        <ImageView
-            android:id="@+id/item_user_score_avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
-            android:src="@mipmap/user_default"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
 
-        <TextView
-            android:id="@+id/item_user_score_nickname"
+
+                <ImageView
+                    android:id="@+id/item_user_score_index_image"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:paddingLeft="15dp"
+                    android:src="@mipmap/user_default"
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/item_user_score_index"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingLeft="15dp"
+                    android:textSize="15sp"
+                    android:textColor="#999999"/>
+
+            </RelativeLayout>
+
+
+            <ImageView
+                android:id="@+id/item_user_score_avatar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:paddingLeft="15dp"
+                android:src="@mipmap/user_default"/>
+
+            <TextView
+                android:id="@+id/item_user_score_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="15dp"
+                android:textColor="#333333"
+                android:textSize="15sp"
+                android:text="昵称"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
-            android:paddingTop="10dp"
-            android:textColor="#1a1a1a"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:ellipsize="end"/>
+            android:layout_weight="1">
 
 
-        <TextView
-            android:id="@+id/item_user_score_text"
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:paddingTop="10dp"
-            android:textColor="#ffa015"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:ellipsize="end"/>
+            android:layout_gravity="center_vertical">
 
 
+            <TextView
+                android:id="@+id/item_user_score_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="#ffa015"
+                android:textSize="15sp"
+                android:ellipsize="end"/>
 
-    </RelativeLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@drawable/bg_space"/>
 
 </LinearLayout>
