--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -1,9 +1,11 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:minHeight="?attr/actionBarSize"
-    android:background="#ffffff">
+    android:minHeight="60dp"
+    app:navigationIcon="@mipmap/qita_icon_fanhui"
+    android:background="#fafafa">
 
     <TextView
         android:id="@+id/toolbar_title"
