--- a/app/src/main/res/layout/layout_toolbar_detail.xml
+++ b/app/src/main/res/layout/layout_toolbar_detail.xml
@@ -2,11 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:minHeight="?attr/actionBarSize"
-    android:background="#ffffff"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+    android:layout_height="60dp"
+    android:minHeight="60dp"
+    android:background="#ffffff">
 
     <TextView
         android:id="@+id/toolbar_title"
