--- a/app/src/main/res/layout/item_haibi_index.xml
+++ b/app/src/main/res/layout/item_haibi_index.xml
@@ -38,9 +38,10 @@
 
                 <TextView
                     android:id="@+id/item_user_score_index"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:paddingLeft="15dp"
                     android:textSize="15sp"
                     android:textColor="#999999"/>
